<resources>
    <string name="app_name">CodingCity</string>
    <string name="title_home">Home</string>
    <string name="title_leaderboard">LeaderBoard</string>
    <string name="title_profile">Profile</string>
    <string name="question_1">Question1.</string>
    <string name="question_2">Question2.</string>
    <string name="question_3">Question3.</string>
    <string name="question_4">Question4.</string>
    <string name="question_5">Question5.</string>
    <string name="true_button">TRUE</string>
    <string name="false_button">FALSE</string>
    <string name="next_button">NEXT</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="sample_text_medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Velit dignissim sodales ut eu sem integer vitae justo.
        Lacus viverra vitae congue eu consequat. Convallis aenean et tortor at risus viverra adipiscing.</string>

    <string name="action_settings">Settings</string>
    <string name="profile_desc">Rowan Sebastian Atkinson CBE is an English actor,  comedian and screenwriter</string>
    <string name="profile_title">Mr Bean</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>

    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="level_begineer">Level: Begineer</string>
    <string name="level_beginner">Level: Beginner</string>
    <string name="_20k_students">20K students</string>
    <string name="course_image">Course Image</string>
    <string name="javascript_beginner_to_advance">Javascript: beginner to advance</string>
    <string name="recommended">Recommended</string>
    <string name="course_content">Course content</string>
    <string name="enrolled_opencourse">Enrolled: Opencourse</string>
    <string name="sample">sample</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="query_unsuccessful">Query sending unsuccesful</string>
    <string name="True">True</string>
    <string name="False">False</string>
    <string name="Correctianswer">Correct!</string>
    <string name="search_courses">Search courses</string>
    <string name="privacy">Privacy</string>
    <string name="documentation">Documentation</string>
    <string name="about_us">About Us</string>
    <string name="feedback">Feedback</string>
    <string name="sign_up">SIGN UP</string>
    <string name="i_agree_with_privacy_polices">I agree with Privacy Polices</string>
    <string name="we_are_glad">WE ARE GLAD</string>
    <string name="to_meet_you">TO MEET YOU</string>
    <string name="lessons">Lessons</string>
    <string name="quizzes">Quizzes</string>
    <string name="Recommended">RECOMMENDED</string>
    <string name="registered">REGISTERED</string>
    <string name="ry623754_dal_ca">ry623754@dal.ca</string>
    <string name="shubham_suri_dal_ca">Shubham.suri@dal.ca</string>
    <string name="delete_my_account">DELETE MY ACCOUNT</string>
    <string name="textview">TextView</string>
    <string name="build_your_knowledge">Build Your Knowledge</string>
    <string name="this_is_a_simple_example">This is A simple example.</string>
    <string name="build_des">This is a simple example. This is a simple example. This is a simple example.</string>
    <string name="build_intro">Build Your Knowledge</string>
    <string name="learn_intro">Learn Coding</string>
    <string name="comp_intro">Complete Task</string>
    <string name="learn_des">This is a simple example. This is a simple example. This is a simple example.</string>
    <string name="comp_des">This is a simple example. This is a simple example. This is a simple example</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="course1">Course1</string>
    <string name="_40">40%</string>
    <string name="attempt">Attempt</string>
    <string name="login_subtitle">Learn anything from anywhere</string>
    <string name="login_email_hint">EMAIL</string>
    <string name="login_password_hint">PASSWORD</string>
    <string name="login_sign_in">Sign In</string>
    <string name="login_create_hint">Don’t you have an account?</string>
    <string name="login_create_tv">Create</string>
    <string name="username">USERNAME</string>
    <string name="shubham_suri">ss</string>
    <string name="help_and_documentation">Help and documentation</string>
    <string name="coding_city_is_basically_developed_to_provide_basic_knowledge_of_prgramming_to_its_users_user_can_have_benefits_of_free_courses_and_to_increase_the_knowledge_one_can_buy_the_courses_as_well">Coding city is basically developed to provide basic knowledge of prgramming to its users.User can have benefits of free courses and to increase the knowledge, one can buy the courses as well.</string>
    <string name="how_to_check_enrolled_courses">How to check enrolled courses?</string>
    <string name="home_page_registered_courses"><![CDATA[Home page --> Registered Courses]]></string>
    <string name="how_to_buy_new_course">How to buy new course?</string>
    <string name="search_select_course_enroll"><![CDATA[Search --> Select Course --> Enroll]]></string>
    <string name="how_to_check_quiz_score">How to check quiz score?</string>
    <string name="quiz_score_is_mentioned_beside_your_quiz_title">Quiz score is mentioned beside your quiz title</string>
    <string name="how_to_take_quiz">How to take quiz?</string>
    <string name="course_quiz_tab_select_the_quiz"><![CDATA[Course --> Quiz tab --> select the quiz]]></string>
    <string name="how_to_remove_courses">How to remove courses?</string>
    <string name="profile_remove_courses"><![CDATA[Profile --> Remove Courses]]></string>
    <string name="any_other_queries">Any other Queries:</string>
    <string name="write_your_queries_here">write your queries here</string>
    <string name="send_email">Send Email</string>
    <string name="general_queries">General Queries:</string>
    <string name="email">EMAIL</string>
    <string name="don_t_you_have_an_account">Don’t you have an account?</string>
    <string name="pay_now">Pay now</string>
    <string name="correct">Correct!</string>
    <string name="send_reset_emial">SEND RESET EMIAL</string>
    <string name="description">Description</string>
</resources>
