<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Help" android:layout_margin="@dimen/dp_20">

    <TextView
        android:id="@+id/helptxt"
        android:layout_width="@dimen/dp_368"
        android:layout_height="@dimen/dp_33"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/dp_11"
        android:text="@string/help_and_documentation"
        android:textColor="@color/blue"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="164dp" />

    <TextView
        android:id="@+id/helptxt1"
        android:layout_width="@dimen/dp_393"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/dp_44"
        android:text="@string/coding_city_is_basically_developed_to_provide_basic_knowledge_of_prgramming_to_its_users_user_can_have_benefits_of_free_courses_and_to_increase_the_knowledge_one_can_buy_the_courses_as_well"
        android:textColor="@color/blue"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="164dp" />

    <TextView
        android:id="@+id/que1"
        android:layout_width="@dimen/dp_360"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/dp_148"
        android:text="@string/how_to_check_enrolled_courses"
        android:textColor="@color/blue"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="164dp" />

    <TextView
        android:id="@+id/ans1"
        android:layout_width="@dimen/dp_360"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/dp_168"
        android:text="@string/home_page_registered_courses"
        android:textColor="@color/blue"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="164dp" />

    <TextView
        android:id="@+id/que2"
        android:layout_width="@dimen/dp_363"
        android:layout_height="@dimen/dp_34"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/dp_211"
        android:text="@string/how_to_buy_new_course"
        android:textColor="@color/blue"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="164dp" />

    <TextView
        android:id="@+id/ans2"
        android:layout_width="@dimen/dp_363"
        android:layout_height="@dimen/dp_34"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/dp_236"
        android:text="@string/search_select_course_enroll"
        android:textColor="@color/blue"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="164dp" />

    <TextView
        android:id="@+id/que3"
        android:layout_width="@dimen/dp_374"
        android:layout_height="@dimen/dp_30"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/dp_283"
        android:text="@string/how_to_check_quiz_score"
        android:textColor="@color/blue"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="164dp" />

    <TextView
        android:id="@+id/ans3"
        android:layout_width="@dimen/dp_374"
        android:layout_height="@dimen/dp_30"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/dp_306"
        android:text="@string/quiz_score_is_mentioned_beside_your_quiz_title"
        android:textColor="@color/blue"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="164dp" />

    <TextView
        android:id="@+id/que4"
        android:layout_width="@dimen/dp_377"
        android:layout_height="@dimen/dp_30"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/dp_354"
        android:text="@string/how_to_take_quiz"
        android:textColor="@color/blue"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="164dp" />

    <TextView
        android:id="@+id/ans4"
        android:layout_width="@dimen/dp_377"
        android:layout_height="@dimen/dp_30"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/dp_376"
        android:text="@string/course_quiz_tab_select_the_quiz"
        android:textColor="@color/blue"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="164dp" />

    <TextView
        android:id="@+id/que5"
        android:layout_width="@dimen/dp_377"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/dp_420"
        android:text="@string/how_to_remove_courses"
        android:textColor="@color/blue"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="164dp" />

    <TextView
        android:id="@+id/ans5"
        android:layout_width="@dimen/dp_371"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="443dp"
        android:text="@string/profile_remove_courses"
        android:textColor="@color/blue"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="164dp" />

    <TextView
        android:id="@+id/helptxt8"
        android:layout_width="@dimen/dp_374"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/dp_494"
        android:text="@string/any_other_queries"
        android:textColor="@color/red"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="164dp" />

    <EditText
        android:id="@+id/edittxt_help_queries"
        android:layout_width="@dimen/dp_374"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/dp_517"
        android:hint="@string/write_your_queries_here"
        android:textColor="@color/blue"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnQuerySent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/dp_557"
        android:text="@string/send_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtgeneralQueries"
        android:layout_width="@dimen/dp_374"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/dp_117"
        android:text="@string/general_queries"
        android:textColor="@color/yellow"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="164dp" />

</RelativeLayout>