<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_leaderboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_leaderboard" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_profile" />
    <item
        android:id="@+id/search_item"
        android:icon="@drawable/ic_search_"
        android:title="search"
        app:showAsAction="ifRoom"/>

</menu>
