<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginHorizontal="20dp">

    <TextView
        android:layout_marginStart="20dp"
        android:id="@+id/quiz_tv"
        android:layout_width="match_parent"
        android:paddingVertical="10dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/sample"
        android:textSize="20sp"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/qz_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:text="@string/attempt"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_40"
        android:textColor="@color/coloreGreen"
        android:textSize="22sp"
        android:visibility="gone"
        android:layout_marginEnd="30dp"/>

</LinearLayout>