<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.LoginActivity">


    <ImageView
        android:id="@+id/login_title"
        android:layout_width="@dimen/dp_317"
        android:layout_height="@dimen/dp_61"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/auth_1" />

    <TextView
        android:id="@+id/login_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Learn anything from anywhere"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title" />

    <ImageView
        android:id="@+id/login_left_img"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_90"
        android:layout_marginStart="@dimen/dp_44"
        android:layout_marginLeft="@dimen/dp_44"
        android:layout_marginTop="@dimen/dp_92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_desc"
        app:srcCompat="@drawable/auth_logo_left" />

    <ImageView
        android:id="@+id/login_middle_img"
        android:layout_width="@dimen/dp_180"
        android:layout_height="@dimen/dp_180"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_36"
        app:layout_constraintEnd_toStartOf="@+id/login_right_img"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toEndOf="@+id/login_left_img"
        app:layout_constraintTop_toBottomOf="@+id/login_desc"
        app:srcCompat="@drawable/auth_logo_middle" />

    <ImageView
        android:id="@+id/login_back_img"
        android:layout_width="@dimen/dp_225"
        android:layout_height="@dimen/dp_253"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_desc"
        app:srcCompat="@drawable/auth_logo_background" />

    <ImageView
        android:id="@+id/login_right_img"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_90"
        android:layout_marginTop="@dimen/dp_92"
        android:layout_marginEnd="@dimen/dp_44"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_back_img"
        app:layout_constraintTop_toBottomOf="@+id/login_desc"
        app:srcCompat="@drawable/auth_logo_right" />

    <EditText
        android:id="@+id/login_user_email"
        android:layout_width="@dimen/dp_364"
        android:layout_height="@dimen/dp_67"
        android:layout_marginTop="@dimen/dp_12"
        android:background="@drawable/auth_input"
        android:drawableLeft="@drawable/auth_email"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/dp_20"
        android:paddingBottom="@dimen/dp_10"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_back_img" />

    <EditText
        android:id="@+id/login_user_password"
        android:layout_width="@dimen/dp_364"
        android:layout_height="@dimen/dp_67"
        android:layout_marginTop="@dimen/dp_68"
        android:background="@drawable/auth_input"
        android:drawableLeft="@drawable/auth_password"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:ems="10"
        android:hint="PASSWORD"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/dp_20"
        android:paddingBottom="@dimen/dp_10"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_back_img" />

    <TextView
        android:id="@+id/login_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_your_password"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.852"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_user_password" />

    <Button
        android:id="@+id/login_btn_sign_in"
        android:layout_width="@dimen/dp_120"
        android:layout_height="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_28"
        android:background="@drawable/btn_auth_selector"
        android:drawableLeft="@drawable/ic_arrow_forward"
        android:paddingRight="@dimen/dp_15"
        android:text="Sign In"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_forget_password" />

    <TextView
        android:id="@+id/login_bottom_text_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_20"
        android:text="@string/don_t_you_have_an_account"
        android:textSize="@dimen/sp_18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.317"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_create_account_tv"
        android:layout_width="@dimen/dp_69"
        android:layout_height="@dimen/dp_24"
        android:layout_marginBottom="@dimen/dp_20"
        android:text=" Create"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/login_bottom_text_tv" />

    <ProgressBar
        android:id="@+id/login_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/dp_59"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_36"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="@+id/login_btn_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/login_user_password" />

</androidx.constraintlayout.widget.ConstraintLayout>